# solstice

./: Cargo.toml  README.md
.github/workflows/: rust.yml
graphics/: Cargo.toml  readme.md
graphics-extras/: Cargo.toml
graphics-extras/src/: d2.rs  lib.rs
graphics-extras/src/d2/: shader.rs  vertex.rs
graphics-macro/: Cargo.toml  readme.md
graphics-macro/src/: attrib.rs  lib.rs  semantics.rs  vertex.rs
graphics-macro/tests/: shader.rs  uniform_interface.rs  vertex.rs
graphics/src/: buffer.rs  canvas.rs  image.rs  lib.rs  mesh.rs  quad_batch.rs  shader.rs  texture.rs  vertex.rs
graphics/src/gl/: mod.rs  null_context.rs  pixel_format.rs  texture.rs  vertex_winding.rs  wrap_mode.rs
solstice/: Cargo.toml  readme.md
solstice-2d/: CHANGELOG.md  Cargo.toml
solstice-2d/examples/: big.rs  blends.rs  boilerplate.rs  csg.rs  custom.glsl  framebuffer.rs  main.rs  main3d.rs  wfc.rs
solstice-2d/examples/resources/: custom.glsl
solstice-2d/src/: d2.rs  d3.rs  lib.rs  shared.rs
solstice-2d/src/d2/: canvas.rs  color.rs  shader.glsl  shader.rs  shapes.rs  text.rs  transforms.rs  vertex.rs
solstice-2d/src/d3/: shader.rs  shapes.rs  transform.rs
solstice-2d/src/d3/shapes/: arc_geometry.rs  box_geometry.rs  plane_geometry.rs  polyhedron_geometry.rs  sphere_geometry.rs
solstice-2d/src/shared/: batch.rs  color.rs  lines.glsl  lines.rs  noise_texture.rs  shader.rs
solstice-derive/: Cargo.toml
solstice-derive/src/: lib.rs
solstice-derive/tests/: shader.rs  vertex.rs
solstice/src/: buffer.rs  canvas.rs  image.rs  lib.rs  mesh.rs  quad_batch.rs  shader.rs  texture.rs  vertex.rs  viewport.rs
solstice/src/gl/: attribute.rs  draw_mode.rs  mod.rs  pixel_format.rs  texture.rs  wrap_mode.rs
