[workspace]
members = [
    "graphics",
    "graphics-macro",
    "engine",
    "engine_examples",
    "vfs",
    "websocket",
    "image",
    "data",
    "conrod_graphics"
]
default-members = [
    "graphics",
    "graphics-macro",
    "engine",
    "engine_examples",
    "vfs",
    "websocket",
    "image",
    "data",
    "conrod_graphics"
]