[workspace]
members = [
    "graphics",
    "graphics-macro",
    "engine",
    "engine_examples",
    "vfs",
    "websocket",
    "image",
    "data",
    "conrod_graphics",
#    "audio",
]
default-members = [
    "graphics",
    "graphics-macro",
    "engine",
    "vfs",
    "websocket",
    "image",
    "data",
]