[package]
name = "graphics-extras"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics = { path = "../graphics" }
graphics-macro = { path = "../graphics-macro" }
data = { path = "../data" }
mint = "0.5"

cgmath = "0.17.0"