[package]
name = "graphics-macro"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
graphics = { path = "../graphics" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
glsl = { path = "../../glsl/glsl" }
glsl-quasiquote = { path = "../../glsl/glsl-quasiquote" }
proc-macro2 = "1.0"
proc-macro-faithful-display = "0.1"