[package]
name = "graphics-macro"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
graphics = { path = "../graphics" }
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
memoffset = "0.5"