[package]
name = "graphics"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[features]
serialize = ["serde", "data/serde"]
derive = ["graphics-macro"]

[dependencies]
data = { path = "../data" }
#glow = { git = "https://github.com/TannerRogalsky/glow.git", branch = "get_uniform" }
#glow = { git = "https://github.com/GrovesNL/glow.git" }
glow = "0.6"
log = "0.4"
slotmap = "0.4"
mint = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
graphics-macro = { path = "../graphics-macro", optional = true }

ndarray = "0.13"

[dev-dependencies]
glutin = "0.23"