[package]
name = "graphics"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[features]
serialize = ["serde"]
derive = ["graphics-macro"]

[dependencies]
glow = "0.6"
log = "0.4"
slotmap = "0.4"
mint = "0.5"
ndarray = "0.13"
serde = { version = "1.0", optional = true, features = ["derive"] }
graphics-macro = { path = "../graphics-macro", optional = true }

[dev-dependencies]
glutin = "0.23"