[package]
name = "solstice-2d"
version = "0.2.2-alpha.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
description = "Easy, cross-platform 2D graphics."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solstice = { version = "^0.1-alpha.0", features = ["derive"] }
mint = "0.5"
arrayvec = "0.5"

glyph_brush = "0.7"
lyon_tessellation = "0.16"

[dev-dependencies]
approx = "0.4"

glutin = "0.24"

wfc = "0.9"
rand = "0.7"
grid_2d = "0.14"
image = { version = "0.23" }
