[package]
name = "solstice-2d"
version = "0.2.16"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
description = "Easy, cross-platform 2D graphics."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#solstice = { features = ["derive"], path = "../solstice" }
solstice = { version = "0.1", features = ["derive"] }
mint = "0.5"
ordered-float = { version = "2", default-features = false }
bytemuck = { version = "1.5", features = ["derive"] }

glyph_brush = "0.7"
nalgebra = { version = "0.29", features = ["mint"] }

[dev-dependencies]
approx = { git = "https://github.com/tannerrogalsky/approx", branch = "array_impl", features = ["array_impl"] }
eyre = "0.6"

glutin = "0.25"

wfc = "0.10"
rand = "0.8"
grid_2d = "0.15"
image = { version = "0.23" }

rscsg = { git = "https://github.com/tannerrogalsky/rscsg", branch = "fixes" }
