[package]
name = "solstice-derive"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
description = "Procedural macros for Solstice."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
memoffset = "0.5"
solstice = { path = "../solstice", version = "^0.1.2-alpha.0"}
