[package]
name = "solstice"
version = "0.1.9"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
description = "Cross-platform graphics."

[features]
serialize = ["serde"]
derive = ["solstice-derive"]

[dependencies]
glow = "0.6"
log = "0.4"
slotmap = "0.4"
mint = "0.5"
ndarray = "0.13"
serde = { version = "1.0", optional = true, features = ["derive"] }
solstice-derive = { path = "../solstice-derive", optional = true, version = "0.1" }

[dev-dependencies]
glutin = "0.25"
