[package]
name = "solstice"
version = "0.1.20-alpha.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
description = "Cross-platform graphics."

[features]
default = ["web-sys"]
serialize = ["serde"]
derive = ["solstice-derive"]

[dependencies]
glow = "0.8"
log = "0.4"
slotmap = "1.0"
mint = "0.5"
ndarray = "0.15"
serde = { version = "1.0", optional = true, features = ["derive"] }
solstice-derive = { path = "../solstice-derive", optional = true, version = "0.1" }
bytemuck = "1.5"

[target."cfg(target_arch = \"wasm32\")".dependencies.web-sys]
version = "0.3"
features = ["HtmlImageElement"]
optional = true

[dev-dependencies]
glutin = "0.26"
